--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --foreground: #000;
+  --background: #fff;
+  --btn-background: #f3f4f6;
+  --btn-background-hover: #e5e7eb;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground: #fff;
+    --background: #000;
+    --btn-background: #374151;
+    --btn-background-hover: #4b5563;
+  }
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
+}
+
+.animate-in {
+  animation: animateIn 0.3s ease 0.15s both;
+}
+
+@keyframes animateIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
